[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flametrench-identity"
version = "0.2.0rc7"
description = "Identity primitives for Flametrench: users, credentials (Argon2id-pinned passwords, passkeys, OIDC), and user-bound sessions with rotation on refresh."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "NDC Digital, LLC" },
]
keywords = ["flametrench", "identity", "users", "credentials", "sessions", "argon2id", "passkey", "oidc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "flametrench-ids>=0.1.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "psycopg[binary]>=3.1",
]
postgres = [
    "psycopg[binary]>=3.1",
]

[project.urls]
Homepage = "https://flametrench.dev"
Repository = "https://github.com/flametrench/identity-python"
Specification = "https://github.com/flametrench/spec"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
